--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,13 @@
     "jsx-quotes": ["error", "prefer-double"],
     "react/jsx-props-no-spreading": 0,
     "react/forbid-prop-types": 0,
+    "react/function-component-definition":[
+      2,
+      {
+        "namedComponents": ["arrow-function", "function-declaration"],
+        "unnamedComponents": "arrow-function"
+      }
+      ],
     "react/jsx-filename-extension": [
       2,
       { "extensions": [".js", ".jsx", ".ts", ".tsx"] }
