--- a/package.json
+++ b/package.json
@@ -62,5 +62,6 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
