--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fff",
   "version": "0.1.0",
   "private": true,
+  "proxy":"http://localhost:8000",
   "dependencies": {
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
