--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "fff",
   "version": "0.1.0",
   "private": true,
-  "proxy":"http://localhost:8000",
+  "proxy": "http://localhost:8000",
   "dependencies": {
+    "@react-oauth/google": "^0.2.8",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.0.0",
@@ -15,7 +16,9 @@
     "eslint": "^8.23.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.3.0",
