--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@types/jest": "^29.0.0",
     "@types/mocha": "^9.1.1",
     "@types/node": "^18.7.14",
+    "@types/path-browserify": "^1.0.0",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "browser-image-compression": "^2.0.0",
+    "buffer-image": "^1.0.0",
+    "buffer-image-size": "^0.6.4",
     "eslint": "^8.23.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
@@ -67,6 +72,5 @@
     "prettier": "^2.7.1",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2"
-  },
-  "proxy": "http://localhost:8000"
+  }
 }
