--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-google-login": "^5.2.2",
     "react-icons": "^4.4.0",
     "react-is": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-sketch-canvas": "^6.2.0",
